--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
+
     </dependencies>
 
 
